--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.google.gms:google-services:4.3.2' //파이어베이스 사용
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
