--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:[5,6)'
     implementation 'com.google.firebase:firebase-auth:19.2.0'//페이스북 sdk
 
+    implementation 'com.google.firebase:firebase-auth:19.1.0'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0' //구글 로그인
+
 }
 
 apply plugin: 'com.google.gms.google-services' //파이어베이스 사용
